// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup component should render avatars with the correct size with the size prop 1`] = `
<div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 32px; height: 32px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 16px;"
    >
      A
    </div>
  </div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 32px; height: 32px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 16px;"
    >
      B
    </div>
  </div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 32px; height: 32px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 16px;"
    >
      C
    </div>
  </div>
</div>
`;

exports[`AvatarGroup component should render properly with default props 1`] = `
<div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 40px; height: 40px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 20px;"
    >
      A
    </div>
  </div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 40px; height: 40px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 20px;"
    >
      B
    </div>
  </div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 40px; height: 40px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 20px;"
    >
      C
    </div>
  </div>
</div>
`;

exports[`AvatarGroup component should render the correct number of avatars with the maxLength prop 1`] = `
<div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 40px; height: 40px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 20px;"
    >
      A
    </div>
  </div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 40px; height: 40px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 20px;"
    >
      B
    </div>
  </div>
  <div
    style="display: inline-block;"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; width: 40px; height: 40px; border-radius: 50%; background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); font-size: 20px;"
    >
      +
      1
    </div>
  </div>
</div>
`;
